# pyproject.toml β€” gpe_core2 (v2-dev)

[build-system]
requires       = ["setuptools>=61.0", "wheel", "setuptools-scm"]
build-backend  = "setuptools.build_meta"

[project]
name           = "gpe-core2"                # π”„ v1β†’v2 ν¨ν‚¤μ§€λ… κµ¬λ¶„
version        = "2.0.0a0"
authors        = [{ name = "YC Math", email = "your-email@example.com" }]
description    = "CGA-optimised Generative Payload Encapsulation core library"
readme         = "README.md"
requires-python = ">=3.10"                  # CUDA 12x wheelμ€ py310+ κ¶μ¥
keywords       = ["gpe", "cga", "data-exchange", "gpu", "zerocopy"]
classifiers    = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

# β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€
# λ°νƒ€μ„ ν•„μ μμ΅΄μ„±
# β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€
dependencies = [
  "numpy>=1.24",            # CuPy 12x wheelκ³Ό νΈν™
  "orjson>=3.9",
  "xxhash>=3.4",
  "redis>=5.0",             # β… A. Expressway Hash-Lane
  "torch>=2.2; extra == \"gpu\"",  # β… D. zero-copy (μ„ νƒ)
]

[project.optional-dependencies]
# GPU flavourλ¥Ό μ„ νƒμ‹μΌλ΅ λ¶„λ¦¬
gpu11    = ["cupy-cuda11x>=12.0.0"]
gpu12    = ["cupy-cuda12x>=12.0.0"]
dev      = [
  "pytest>=8",
  "hypothesis>=6.100", 
  "pytest-cov>=5.0",  # β† μ¶”κ°€
  "black>=24.3",
  "ruff>=0.4",
  "isort>=5.13",
  "flake8>=7.0",
  "mypy>=1.10",
  "tqdm>=4.66",
]
all      = ["gpe-core2[gpu12,dev]"]   # one-shot μ„¤μΉμ©

[project.urls]
Homepage        = "https://github.com/ycmath/gpe_core2"
"Bug Tracker"   = "https://github.com/ycmath/gpe_core2/issues"
Documentation   = "https://github.com/ycmath/gpe_core2/wiki"

[project.scripts]
gpe = "gpe_core2.cli:main"            # μ§„μ…μ  λ¨λ“ λ³€κ²½

# β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€
# setuptools κµ¬μ„±
# β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€
[tool.setuptools]
packages = [
  "gpe_core2",
  "gpe_core2.encoder",
  "gpe_core2.decoder",
  "gpe_core2.utils",
  "gpe_core2.glassbox",
]

include-package-data = true

[tool.setuptools.package-data]
"gpe_core2.decoder" = ["*.cu", "*.cuh"]   # GPU μ»¤λ„μ΄ μμ„ κ²½μ°

# β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€
# κ°λ° λ„κµ¬ μ„¤μ •
# β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€β”€
[tool.isort]
profile      = "black"
line_length  = 88

[tool.black]
line-length      = 88
target-version   = ["py310", "py311", "py312"]

[tool.mypy]
python_version         = "3.10"
strict_optional        = true
warn_unused_configs    = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "cupy.*",
  "torch.*",
  "redis.*",
  "orjson.*",
  "xxhash.*",
]
ignore_missing_imports = true
